# reasoning-probing

./: .gitignore  README.md  missing_features_analysis.json  pyproject.toml  requirements.txt  setup.py  setup.sh
TransformerLens/demos/: Colab_Compatibility.ipynb
TransformerLens/transformer_lens/: loading_from_pretrained.py
circuit-tracer/: pyproject.toml
docs/: appendix.md  methodology.md
featureinterp/: api_client.py  complexity.py  complexity_examples.py  core.py  explainer.py  formatting.py  local_inference.py  prompt_builder.py  record.py  record_examples.py  scoring.py  similarity_retriever.py  simulator.py  utils.py
probing/: README.md  __init__.py  activation_collector.py  analyze_results.py  dataset_interface.py  debug_activations.py  inspect_data_samples.py  inspect_tokenization.py  probe_model.py  run_experiments.sh  run_probing_experiment.py  test_implementation.py  trainer.py
reasoning_dataset/: annotate.py  reasoning_dataset.py
reasoning_features/: __init__.py
reasoning_features/bash/: analyze_feature_interpretation.sh  find_reasoning_features.sh  run_anova_experiment.sh  run_steering_experiment.sh  run_token_injection_experiment.sh  run_transcoder_falsification_pipeline.sh  visualize_injection_features.sh
reasoning_features/datasets/: __init__.py  anova.py  base.py  benchmarks.py  pile.py  reasoning.py
reasoning_features/features/: __init__.py  collector.py  detector.py  runtime.py  selection.py  tokens.py  (+1 more)
scripts/: display_feature_records.py  experiment.py  explainer_comparison.py  generate_records.py  single_index_demo.py
(+22 files in other folders)
